appmesh/djapp/2_app_mesh/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prodapp
  labels:
    mesh: dj-app
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
